$Id: History,v 1.11 2001-10-19 05:46:53 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm5 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 19, 2001  Steve O'Neale (examples-V03-02-00)
- Update reference output

16-10-01 mma (testem5-V03-02-00)
- removal of G4RW header (EventAction.cc)
- new vis commands (init.mac)
- 80 columns everywhere
    
27-03-01 mma (testem5-V03-00-04)
- set cppflag G4NOHIST = true in gnumakefile
	  
21-02-01 mma (testem5-V03-00-03)
- hbook histograms restored
	  
20-02-01 mma (testem5-V03-00-02)
- verbose stepping adapted for STL
- save rndm at begin of event 
	     
09-01-01 mma
- modified Em5PhysicsList and Em5StepCut in order to make the
  command /step/setMaxStep working
	      
07-12-00 mma (testem5-V02-00-03 & testem-noHist)
- remove hbook histograms: GNUmakefile,runAction
				   
06-12-00 mma (testem5-V02-00-02 & testem-withHist)
- update of init.mac for new vis commands.
- G4UItcsh in the main()
	  
25th November 2000 Steve O'Neale (tagset210)
- update test outputs for min.delta energy cut and cut table
- Change in processes below ~ 1 per cent.

June 17, 2000  John Allison  (testem5-V01-00-00)
- Updated TestEm5.out for geant4-01-01-ref-06.
     
17-01-00 cppflag G4NOHIST to protect hbook histograms.
- new histo: normalizsed distribution of energy deposit.
- new materials (mainly gas)
     