@@ -1,4 +1,4 @@
-$Id: README,v 1.3 2001-03-30 12:38:03 gcosmo Exp $
+$Id: README,v 1.4 2001-11-05 17:57:58 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,7 +19,7 @@ $Id: README,v 1.3 2001-03-30 12:38:03 gcosmo Exp $
  	- the transverse size of the absorber (the input face is a square). 
     
         The volume "World" contains the "absorber". 
-        In this test the parameters of the "World" can be changed , too.
+        In this test the parameters of the "World" can be changed, too.
 
  	In addition a transverse uniform magnetic field can be applied.
  	
@@ -67,10 +67,22 @@ $Id: README,v 1.3 2001-03-30 12:38:03 gcosmo Exp $
                 paw> h/file 1 geant4.plot01 
                 paw> option stat
                 paw> h/pl 1
-
-
  				
- 4- PHYSICS DEMO
+ 4- VISUALIZATION
+ 
+ 	The Visualization Manager is set in the main().
+ 	The initialisation of the drawing is done via the commands
+ 	/vis/... in the macro vis.mac. In interactive session:
+	PreInit or Idle > /control/execute vis.mac
+ 	
+ 	The detector has a default view which is a longitudinal view of the 
+ 	calorimeter.
+ 	
+ 	The tracks are drawn at the end of event, and erased at the end of run.
+ 	Optionaly one can choose to draw all particles, only the charged one,
+ 	or none. This command is defined in EventActionMessenger class.
+ 				
+ 5- PHYSICS DEMO
  
  	The particle's type and the physic processes which will be available
  	in this example are set in PhysicsList class.
@@ -79,8 +91,7 @@ $Id: README,v 1.3 2001-03-30 12:38:03 gcosmo Exp $
         commands the geometry of the detector, the data of the primary
         particle, the limits of the histograms , etc. can be changed.
  	
-
- 5- HOW TO START ?
+ 6- HOW TO START ?
  
  	- compile and link to generate an executable
  		% cd TestEm5
@@ -95,7 +106,7 @@ $Id: README,v 1.3 2001-03-30 12:38:03 gcosmo Exp $
 		Idle> type your commands
 		....
 		
- 6- GEANT4/GEANT3/exp.data comparison
+ 7- GEANT4/GEANT3/exp.data comparison
 
         A GEANT4/GEANT3/exp. data comparison is given here for a few cases.
         
