@@ -7,6 +7,10 @@
 #control/saveHistory
 /run/verbose 2
 #
+/calor/cutG 13.0 micrometer
+/calor/cutE 1.12 micrometer
+/run/initialize
+#
 /calor/setAbsMat Gold      
 /calor/setAbsThick 19.296 mum  
 /calor/setAbsYZ 10. cm
@@ -19,11 +23,6 @@
 /plots/setnbinTh 60
 /plots/setThlow 0.0 deg
 /plots/setThhigh 30.0 deg
-#
-/calor/cutG 13.0 micrometer
-/calor/cutE 1.12 micrometer
-/run/initialize
-#
 #
 /gun/particle e- 
 /gun/energy 15.7 MeV
