@@ -7,6 +7,10 @@
 #control/saveHistory
 /run/verbose 2
 #
+/calor/cutG 2130.0 micrometer
+/calor/cutE 7.000 micrometer
+/run/initialize
+#
 /calor/setAbsMat Silicon   
 /calor/setAbsThick 92.6 mum  
 /calor/setAbsYZ 10. cm
@@ -19,10 +23,6 @@
 /plots/setnbinTh 60
 /plots/setThlow 0.0 deg
 /plots/setThhigh 6.0 deg
-#
-/calor/cutG 2130.0 micrometer
-/calor/cutE 7.000 micrometer
-/run/initialize
 #
 /gun/particle proton
 /gun/energy 6.56 MeV
