@@ -7,6 +7,10 @@
 #control/saveHistory
 /run/verbose 2
 #
+/calor/cutG 2250.0 micrometer
+/calor/cutE 6.050 micrometer
+/run/initialize
+#
 /calor/setAbsMat Aluminium 
 /calor/setAbsThick 4.005 mm  
 /calor/setAbsYZ 10. cm
@@ -20,10 +24,6 @@
 /plots/setnbinTh 100
 /plots/setThlow 0.0 deg
 /plots/setThhigh 0.01 deg
-#
-/calor/cutG 2250.0 micrometer
-/calor/cutE 6.050 micrometer
-/run/initialize
 #
 #
 /gun/particle proton
