@@ -7,6 +7,10 @@
 #control/saveHistory
 /run/verbose 2
 #
+/calor/cutG 2.13 mm    
+/calor/cutE 7.00 micrometer
+/run/initialize
+#
 /calor/setAbsMat Silicon   
 /calor/setAbsThick  61.0 mum  
 /calor/setAbsYZ 10. cm
@@ -19,10 +23,6 @@
 /plots/setnbinEn 55
 /plots/setEnlow 0.0 MeV
 /plots/setEnhigh 1.1  MeV  
-#
-/calor/cutG 2.13 mm    
-/calor/cutE 7.00 micrometer
-/run/initialize
 #
 /gun/particle e- 
 /gun/energy 1.00 MeV
