@@ -7,6 +7,10 @@
 #control/saveHistory
 /run/verbose 2
 #
+/calor/cutG 2.13 mm    
+/calor/cutE 7.00 micrometer
+/run/initialize
+#
 /calor/setAbsMat Silicon   
 /calor/setAbsThick 105.0 mum  
 /calor/setAbsYZ 10. cm
@@ -17,12 +21,8 @@
 /plots/sethistName geant4.plot12
 #  PLOT: energy deposit distribution in absorber
 /plots/setnbinEn 55
-/plots/setEnlow 0.0 MeV
-/plots/setEnhigh 1.1  MeV  
-#
-/calor/cutG 2.13 mm    
-/calor/cutE 7.00 micrometer
-/run/initialize
+/plots/setEnlow  0.0 MeV
+/plots/setEnhigh 1.1 MeV  
 #
 /gun/particle e- 
 /gun/energy 1.00 MeV
