@@ -6,6 +6,10 @@
 /control/verbose 2
 /run/verbose 2
 #
+/calor/cutG 2.13 mm    
+/calor/cutE 7.0  mum
+/run/initialize
+#
 /calor/setAbsMat Silicon   
 /calor/setAbsThick 20.5 mum  
 /calor/setAbsYZ    10 cm
@@ -19,10 +23,6 @@
 /plots/setnbinEn 65
 /plots/setEnlow   0. keV
 /plots/setEnhigh 13. keV  
-#
-/calor/cutG 2.13 mm    
-/calor/cutE 7.0  mum
-/run/initialize
 #
 /gun/particle pi+ 
 /gun/energy 5. GeV
