@@ -6,13 +6,13 @@
 /control/verbose 2
 /run/verbose 2
 #
+/run/initialize
+#
 /calor/setAbsMat Silicon   
 /calor/setAbsThick 10 mum  
 /calor/setAbsYZ 20 mum
 /calor/update
 /gun/setDefault
-#
-#/vis/viewer/zoom 1.4
 #
 /gun/particle e-
 /gun/energy 500 keV
