@@ -5,6 +5,7 @@
 #
 /control/verbose 2
 /run/verbose 2
+/run/initialize
 #
 # Create empty scene ("world" is default)
 /vis/scene/create
@@ -12,8 +13,7 @@
 # Create a scene handler for a specific graphics system
 # Edit the next line(s) to choose another graphic system
 #
-#/vis/open DAWNFILE
-#
+/vis/open DAWNFILE
 /vis/open OGLIX
 #
 # Draw scene
